FIx: tsble overflow width

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,3 +93,13 @@ input[type="number"] {
 ::-webkit-scrollbar-thumb:hover {
   background: #070b79;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; 
+}
+
